@@ -1,6 +1,6 @@
 DIST SKINSbmodels-48files-4-23-05.zip 12627945 RMD160 fdf330380e1b05857d4c387c806e05a0001550b9 SHA1 9f3054a2e16790bcce9a824242e34efc5e9c8080 SHA256 85a450b23eeb44539a3cf1a4c9feb1aeb56a14ec4b89d01dba5d237b8987c284
 DIST qrp-maptextures-2007-10-06r2-7files.zip 207202676 RMD160 e64168a1b833c112110daa4580b125856dc07586 SHA1 d274173f24608ad107acccca66132246e8a5e6bb SHA256 a147ccb515f33d1bfd9411891dedc369b9b904a00c75513ee8480bc57c6cadd5
 DIST rygel-dp-texturepack-high.pk3 935322290 RMD160 ea59b5d3ac5478a034727e1a27adb331044b1058 SHA1 22aa11c2536d05ad78dbc93b19962057f4c7644a SHA256 bbf90f34a63c394091f20a44d50592e519f69ae5c96b5fb76568d49d94cdfd5d
-EBUILD quake1-textures-20060722.ebuild 1703 RMD160 a7d2eb1b827a0939237607e1e02c0f32d557067c SHA1 de423f0b6e6c9b2d8146653a54c300c3cf4d62d2 SHA256 93d7237348c8d2749aff706495e92620c8729ab87d34ff7c2b0c59308ee50805
-EBUILD quake1-textures-20071001.ebuild 2413 RMD160 e51ca78e50cc4478538459188cfb3648a70b9c51 SHA1 6a2673a993ddba4459bbc231fc0e16b69c795838 SHA256 96dd51595e076bcf8bede85c4c63968430576f4ca3b01ab6f9cb37f867587884
-MISC ChangeLog 510 RMD160 a8914f9b0f2c79a7adb8cbc48a9db7386f59dd38 SHA1 3f73e42747c09fafa10405434803274ed6650b61 SHA256 17d93eace7f54da2a0739b03ea2362e4c1230cf35e92eacc6175033b5b4cbf60
+EBUILD quake1-textures-20060722.ebuild 1718 RMD160 db63f55be2f9a758d6aaa8d26c17ff06d36d0773 SHA1 c549e27617648b8ba3cf53cba3185ef00f68bb02 SHA256 e21520d24c3c934d70be290db9644fdf37acd1f4f3b4ccc375f3c5b3d27ba45c
+EBUILD quake1-textures-20071001.ebuild 2470 RMD160 489a55ba52e487022b3a6d70fa878fe9018cde51 SHA1 67bcc0708f6e1fefbd5cec733a813b95b126e672 SHA256 241de0dea26f3666c22c9e79aefb1272dc427d0699c23a3ecab2efd9f709275f
+MISC ChangeLog 649 RMD160 4f4c9c0126de0c2260af4ea7c9cf4b770a0020ed SHA1 acfca24a478a9673554e520349890abbc6d217e9 SHA256 ab807822f41fa893c397a3f899ecd8760d693db3e1829f643871541e1a66a447
