@@ -1,5 +1,9 @@
 # ChangeLog for quake1-textures
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+
+  21 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl>
+  quake1-textures-20060722.ebuild, quake1-textures-20071001.ebuild:
+  Added die to dodoc.
 
   18 Apr 2008; Piotr Szymaniak <lazy_bum@o2.pl>
   +quake1-textures-20071001.ebuild:
